# p3a-json

./: .env  Cargo.toml  LICINSE  README  docker-compose.yml  extensions.json  localstack-init.sh
crates/component_updater/: Cargo.toml
crates/component_updater/src/: lib.rs
crates/constellation/: Cargo.toml
crates/db/: Cargo.toml
crates/db/src/: dynamodb.rs  lib.rs
crates/p3a/: Cargo.toml
crates/web_common/: Cargo.toml
crates/web_common/src/: error.rs
crates/web_common/src/middleware/: auth.rs  mod.rs
crates/worker/: Cargo.toml
http_test/: api_tests.http  update2_json.http
migrations/: 20250521084328_create_telemetry_events_table.down.sql  20250521084328_create_telemetry_events_table.sql  20250618075831_create_public_keys.down.sql  20250618075831_create_public_keys.up.sql
src/: channel.rs  error.rs  lib.rs  main.rs  payload.rs  profiler.rs  queue_job.rs  response.rs  routers.rs  telemetry_event.rs  worker.rs
src/constellation/: aggregation.rs  mod.rs  types.rs  utils.rs
src/constellation/handlers/: collector.rs  instances.rs  mod.rs  p3a.rs
src/constellation/routes/: collector.rs  instances.rs  mod.rs  p3a.rs
src/domain/: mod.rs  telemetry_event.rs
src/model/: public_key.rs
src/models/: error.rs  mod.rs
src/omaha/: factory.rs
src/omaha/protocol/: protocol.rs
src/omaha/v3/: protocol.rs  request.rs  response.rs
src/omaha/v4/: protocol.rs  request.rs  response.rs
src/update2/: extension.rs  mod.rs  model.rs  response.rs  router.rs  utils.rs
tests/: api_tests.rs
tests/common/: mod.rs
