[package]
name = "telemetry_events"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/component_updater",
    "crates/constellation",
    "crates/db",
    "crates/p3a",
    "crates/web_common",
    "crates/worker"]


[workspace.dependencies]
component-updater = { path = "crates/component-updater" }

[dependencies]
actix-web = "4.11.0"
actix-http = "3.11.0"
actix = "0.13.5"
actix-rt = "2.10.0"
actix-service = "2.0.3"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
lapin = "2.3"
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
aws-config = "1"
aws-sdk-dynamodb = "1"
aws-types = "1"
dotenvy = "0.15"
env_logger = "0.11.8"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
star-constellation = "0.2.5"
rand = "0.9.1"
