[package]
name = "telemetry_events"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "telemetry_events_server"
path = "src/main.rs"


[dependencies]
actix-web = "4"
actix-http = "3.11.0"
actix = "0.13"
actix-rt = "2.9"
actix-service = "2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
lapin = "2.3"
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
aws-config = "1"
aws-sdk-dynamodb = "1"
aws-types = "1"
dotenvy = "0.15"
env_logger = "0.11.8"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.1"
async-trait = "0.1.88"
derive_more = "2.0.1"