[package]
name = "telemetry_events"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "telemetry_events_server"
path = "src/main.rs"


[dependencies]
actix-web = "4"
actix = "0.13"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
dotenvy = "0.15"
env_logger = "0.11.8"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.1"
derive_more = "2.0.1"