[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }
aws-sdk-dynamodb = "1.79.0"
aws-config = { version = "1.6.3", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }